[gd_scene load_steps=11 format=2]

[ext_resource path="res://components/button_base/button_base.tscn" type="PackedScene" id=1]
[ext_resource path="res://theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/font/StoryFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://components/demo_over/demo_over.gd" type="Script" id=4]
[ext_resource path="res://components/story_frame/story_frame.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0.75 )

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 16.0
content_margin_right = 16.0
content_margin_top = 16.0
content_margin_bottom = 16.0
bg_color = Color( 0.0470588, 0.0627451, 0.101961, 1 )
border_color = Color( 0.658824, 0.803922, 0.211765, 1 )

[sub_resource type="Animation" id=4]
resource_name = "Enter"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "RotateRays"
length = 60.0
loop = true

[node name="DemoOver" type="Control"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 4 )

[node name="Container" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 5 )

[node name="Scroll" type="ScrollContainer" parent="Container"]
margin_left = 50.0
margin_right = 650.0
margin_bottom = 700.0
rect_min_size = Vector2( 600, 0 )
size_flags_horizontal = 4
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="V" type="VBoxContainer" parent="Container/Scroll"]
margin_right = 600.0
margin_bottom = 700.0
rect_min_size = Vector2( 600, 0 )
size_flags_horizontal = 4
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="Beeper" parent="Container/Scroll/V" instance=ExtResource( 5 )]
margin_top = 279.0
margin_bottom = 340.0
character = 2

[node name="Label" type="Label" parent="Container/Scroll/V/Beeper"]
margin_left = 16.0
margin_top = 16.0
margin_right = 584.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 3 )
text = "T_STORY_DEMO"
autowrap = true

[node name="Continue" parent="Container/Scroll/V" instance=ExtResource( 1 )]
margin_top = 360.0
margin_right = 600.0
margin_bottom = 420.0
rect_min_size = Vector2( 320, 60 )
text = "T_CONTINUE"

[node name="Buttons" type="PanelContainer" parent="Container/Scroll/V"]
visible = false
margin_top = 209.0
margin_right = 600.0
margin_bottom = 652.0
rect_min_size = Vector2( 600, 0 )
custom_styles/panel = SubResource( 3 )

[node name="V" type="VBoxContainer" parent="Container/Scroll/V/Buttons"]
margin_left = 16.0
margin_top = 16.0
margin_right = 584.0
margin_bottom = 427.0
custom_constants/separation = 24

[node name="Wishlist" type="VBoxContainer" parent="Container/Scroll/V/Buttons/V"]
margin_right = 568.0
margin_bottom = 93.0

[node name="Label" type="Label" parent="Container/Scroll/V/Buttons/V/Wishlist"]
modulate = Color( 0.658824, 0.803922, 0.211765, 1 )
margin_right = 568.0
margin_bottom = 29.0
text = "Add the game to your wishlist!"
align = 1

[node name="Wishlist" parent="Container/Scroll/V/Buttons/V/Wishlist" instance=ExtResource( 1 )]
margin_top = 33.0
margin_right = 568.0
margin_bottom = 93.0
text = "Wishlist"

[node name="Newsletter" type="VBoxContainer" parent="Container/Scroll/V/Buttons/V"]
margin_top = 117.0
margin_right = 568.0
margin_bottom = 210.0

[node name="Label" type="Label" parent="Container/Scroll/V/Buttons/V/Newsletter"]
modulate = Color( 0.658824, 0.803922, 0.211765, 1 )
margin_right = 568.0
margin_bottom = 29.0
text = "Get an exclusive item upon launch!"
align = 1
autowrap = true

[node name="Subscribe" parent="Container/Scroll/V/Buttons/V/Newsletter" instance=ExtResource( 1 )]
margin_top = 33.0
margin_right = 568.0
margin_bottom = 93.0
text = "Join Mailing List"

[node name="Discord" type="VBoxContainer" parent="Container/Scroll/V/Buttons/V"]
margin_top = 234.0
margin_right = 568.0
margin_bottom = 327.0

[node name="Label" type="Label" parent="Container/Scroll/V/Buttons/V/Discord"]
modulate = Color( 0.658824, 0.803922, 0.211765, 1 )
margin_right = 568.0
margin_bottom = 29.0
text = "Share your feedback!"
align = 1

[node name="Discord" parent="Container/Scroll/V/Buttons/V/Discord" instance=ExtResource( 1 )]
margin_top = 33.0
margin_right = 568.0
margin_bottom = 93.0
text = "Join Discord Server"

[node name="Finish" parent="Container/Scroll/V/Buttons/V" instance=ExtResource( 1 )]
modulate = Color( 0.266667, 0.337255, 0.52549, 1 )
margin_top = 351.0
margin_right = 568.0
margin_bottom = 411.0
text = "T_FINISH"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "RotateRays"
anims/Enter = SubResource( 4 )
anims/RESET = SubResource( 1 )
anims/RotateRays = SubResource( 2 )

[connection signal="button_down" from="Container/Scroll/V/Continue" to="." method="show_buttons"]
[connection signal="button_down" from="Container/Scroll/V/Buttons/V/Wishlist/Wishlist" to="." method="_on_Wishlist_button_down"]
[connection signal="button_down" from="Container/Scroll/V/Buttons/V/Newsletter/Subscribe" to="." method="_on_Subscribe_button_down"]
[connection signal="button_down" from="Container/Scroll/V/Buttons/V/Discord/Discord" to="." method="_on_Discord_button_down"]
[connection signal="button_down" from="Container/Scroll/V/Buttons/V/Finish" to="." method="hide"]
